k8s-2/wordpress/ingress/othersite.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ingress
spec:
  rules:
  - host: wpsite.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wp-service
            port:
              number: 80
  - host: othersite.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
