k8s-2/wordpress/ingress/wp-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: wpsite.com
    http:
      paths:
      - path: /myblog
        pathType: Prefix
        backend:
          service:
            name: wp-service
            port:
              number: 80
